--- a/app/src/main/res/layout/fragment_forecast_details.xml
+++ b/app/src/main/res/layout/fragment_forecast_details.xml
@@ -3,30 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".details.ForecastDetailsActivity">
+    android:layout_height="80dp"
+    android:foreground="?attr/selectableItemBackground"
+    android:clickable="true"
+    >
 
     <TextView
         android:id="@+id/tempText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
         android:maxLines="1"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="75.4" />
+        tools:text="72.0"/>
 
     <TextView
         android:id="@+id/descriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintStart_toStartOf="@+id/tempText"
-        app:layout_constraintTop_toBottomOf="@+id/tempText"
-        tools:text="Partly Cloudy" />
+        android:layout_marginStart="16dp"
+        tools:text="Clear"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toBottomOf="@id/tempText"
+        app:layout_constraintStart_toEndOf="@id/tempText"
+        app:layout_constraintTop_toTopOf="@id/tempText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
