--- a/app/src/main/res/layout/fragment_current_forecast.xml
+++ b/app/src/main/res/layout/fragment_current_forecast.xml
@@ -7,17 +7,29 @@
     android:layout_height="match_parent"
     tools:context=".forecast.CurrentForecastFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/dailyForecastList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#ABABAB"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/locationName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_daily_forecast"
-        />
+        tools:text="Seattle" />
+
+    <TextView
+        android:id="@+id/tempText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/locationName"
+        app:layout_constraintTop_toBottomOf="@+id/locationName"
+        tools:text="64.5°" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/locationEntryButton"
@@ -25,10 +37,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:tint="@android:color/white"
         android:clickable="true"
         android:src="@drawable/ic_place_black_24dp"
-        android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
