--- a/app/src/main/res/layout/fragment_forecast_details.xml
+++ b/app/src/main/res/layout/fragment_forecast_details.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".details.ForecastDetailsFragment">
@@ -44,6 +45,6 @@
         app:layout_constraintEnd_toEndOf="@+id/forecastIcon"
         app:layout_constraintStart_toStartOf="@+id/forecastIcon"
         app:layout_constraintTop_toBottomOf="@+id/forecastIcon"
-        tools:text="04-12-2020" />
+        tools:text="06-03-2020" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
