--- a/app/src/main/res/layout/fragment_location_entry.xml
+++ b/app/src/main/res/layout/fragment_location_entry.xml
@@ -1,47 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
-    tools:context=".location.LocationEntryFragment">
+    tools:context=".location.LocationEntryFragment"
+    >
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter your zipcode:"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
+        android:text="Enter your zipcode"
+        android:textSize="@dimen/title_text_height"
         app:layout_constraintBottom_toTopOf="@+id/zipcodeEditText"
         app:layout_constraintEnd_toEndOf="@+id/zipcodeEditText"
         app:layout_constraintStart_toStartOf="@+id/zipcodeEditText" />
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_place_black_24dp"
         app:layout_constraintBottom_toTopOf="@+id/title"
         app:layout_constraintEnd_toEndOf="@+id/title"
-        app:layout_constraintStart_toStartOf="@+id/title"
-        app:srcCompat="@android:drawable/ic_menu_mylocation" />
+        app:layout_constraintStart_toStartOf="@+id/title" />
 
     <EditText
         android:id="@+id/zipcodeEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:hint="Enter zipcode"
         android:inputType="number"
-        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.19" />
+        app:layout_constraintVertical_bias="0.24000001" />
 
     <Button
         android:id="@+id/enterButton"
@@ -51,4 +47,5 @@
         app:layout_constraintEnd_toEndOf="@+id/zipcodeEditText"
         app:layout_constraintStart_toStartOf="@+id/zipcodeEditText"
         app:layout_constraintTop_toBottomOf="@+id/zipcodeEditText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
